# quote-reader

./: .gitignore  Cargo.toml  LICENSE  messages.json
examples/: messages.json
src/: definitions.rs  loader.rs  main.rs  message.rs
